tests/paczka1/fuzzy1/70128665.err
Error in line 5: TsFF4VcclkT S6OO 1,5
Error in line 6: TsFF4VcclkT S685 62,1
Error in line 1: NuPFbY3v S685 31,7
Error in line 25: TsFF4VcclkT A488 -4,2
